Refactored voting and algo code

--- a/choice-coin-entry/.env
+++ b/choice-coin-entry/.env
@@ -1,3 +1,10 @@
 FLASK_DEBUG=True
 SECRET_KEY=soft-life
 SQLALCHEMY_DATABASE_URI=sqlite:///voters.db
+ALGOD_TOKEN=fi0QdbiBVl8hsVMCA2SUg6jnQdvAzxY48Zy2G6Yc
+ALGOD_ADDRESS=https://testnet-algorand.api.purestake.io/ps2
+escrowAddr ="3JTSHP4IT2JAHDN3PXY64E2DU6GCVPTLPXHLOK5JDSFGKH3WIV2GCFU6QY"
+escrowPhrase ="leopard gain lunch soccer slush supply engage gather pill page fence update scissors later brave image depart media indicate senior ready stand again absent worry"
+fundAddr ="WHNTB5KQTGKBQSZAJ5VX745SGYJTCKSQ2PX7KA3MVCXV7FNAEGLIGOKOZE"
+fundPhrase ="foam fault power empty bulb usage round guard evoke city wish screen logic express assume extra copper kind prize table math wheat bargain absorb like"
+choice_id=21364625
