Setup routes for admin and voter login

--- a/choice-coin-entry/.env
+++ b/choice-coin-entry/.env
@@ -1,7 +1,7 @@
 FLASK_DEBUG=True
 SECRET_KEY=soft-life
 SQLALCHEMY_DATABASE_URI=sqlite:///voters.db
-UPLOAD_FOLDER='/static/uploads/'
+UPLOAD_FOLDER='./static/uploads/'
 ALGOD_TOKEN=fi0QdbiBVl8hsVMCA2SUg6jnQdvAzxY48Zy2G6Yc
 ALGOD_ADDRESS=https://testnet-algorand.api.purestake.io/ps2
 escrowAddr ="3JTSHP4IT2JAHDN3PXY64E2DU6GCVPTLPXHLOK5JDSFGKH3WIV2GCFU6QY"
